syntax = "proto3";

package clutch.resolver.aws.v1;

option go_package = "github.com/lyft/clutch/backend/api/resolver/aws/v1;awsv1";

import "resolver/v1/annotations.proto";

message InstanceID {
  option (clutch.resolver.v1.schema) = {
    display_name : "instance ID"
    search : {enabled : true}
  };

  string id = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "ID",
    required : true,
    string_field : {
      placeholder : "i-1234567890",
    },
  } ];

  string region = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Region",
    option_field : {include_all_option : true, include_dynamic_options : "regions"},
  } ];

  string account = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Account",
    option_field : {include_all_option : true, include_dynamic_options : "accounts"},
  } ];
}

message AutoscalingGroupName {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-autoscaling-group-name",
    },
  } ];

  string region = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Region",
    option_field : {include_all_option : true, include_dynamic_options : "regions"},
  } ];

  string account = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Account",
    option_field : {include_all_option : true, include_dynamic_options : "accounts"},
  } ];
}

message KinesisStreamName {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-kinesis-stream-name",
    },
  } ];

  string region = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Region",
    option_field : {include_all_option : true, include_dynamic_options : "regions"},
  } ];

  string account = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Account",
    option_field : {include_all_option : true, include_dynamic_options : "accounts"},
  } ];
}

message DynamodbTableName {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-dynamodb-table-name",
    },
  } ];

  string region = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Region",
    option_field : {include_all_option : true, include_dynamic_options : "regions"},
  } ];

  string account = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Account",
    option_field : {include_all_option : true, include_dynamic_options : "accounts"},
  } ];
}

message S3BucketName {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-s3-bucket-name",
    },
  } ];

  string region = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Region",
    option_field : {include_all_option : true, include_dynamic_options : "regions"},
  } ];

  string account = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Account",
    option_field : {include_all_option : true, include_dynamic_options : "accounts"},
  } ];
}

message S3AccessPointName {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-s3-access-point-name",
    },
  } ];

  string region = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Region",
    option_field : {include_all_option : true, include_dynamic_options : "regions"},
  } ];

  string account = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Account",
    option_field : {include_all_option : true, include_dynamic_options : "accounts"},
  } ];
}

message IAMRoleName {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-iam-role-name",
    },
  } ];

  string region = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Region",
    option_field : {include_all_option : true, include_dynamic_options : "regions"},
  } ];

  string account = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Account",
    option_field : {include_all_option : true, include_dynamic_options : "accounts"},
  } ];
}
